--- a/app/design/frontend/rwd/default/template/buckaroo3extended/creditcard/checkout/form.phtml
+++ b/app/design/frontend/rwd/default/template/buckaroo3extended/creditcard/checkout/form.phtml
@@ -8,13 +8,13 @@
     <div class="card_front">
         <div class="cardNumber_container">
             <label for="cardNumber">Card number</label>
-            <input id="cardNumber" type="text" name="cardNumber" placeholder="XXXX XXXX XXXX XXXX" onblur="checkCardType(this)" />
+            <input id="cardNumber" type="text" name="cardNumber" placeholder="XXXX XXXX XXXX XXXX" onblur="checkCardType(this)" onkeydown="removeSpaces(this)" />
         </div>
 
         <div class="expirationMonth_container">
             <label for="expirationMonth">Expiration</label>
             <div class="select_wrapper">
-                <select id="expirationMonth" type="text" name="expirationMonth">
+                <select id="expirationMonth" type="text" name="expirationMonth" onblur="getEncryptedData()">
                     <option value="0">Select a month</option>
                     <option value="1">January</option>
                     <option value="2">February</option>
@@ -31,12 +31,12 @@
                 </select>
             </div>
 
-            <input id="expirationYear" type="text" name="expirationYear" placeholder="Year: XXXX"/>
+            <input id="expirationYear" type="text" name="expirationYear" onblur="getEncryptedData()" placeholder="Year: XXXX"/>
         </div>
 
         <div class="cardHolderName_container">
             <label for="cardHolderName">Name cardholder</label>
-            <input id="cardHolderName" type="text" name="cardHolderName" placeholder="Name"/>
+            <input id="cardHolderName" type="text" name="cardHolderName" onblur="getEncryptedData()" placeholder="Name"/>
         </div>
     </div>
 
@@ -45,14 +45,13 @@
         <div class="magnet_stripe"></div>
         <div class="card_security">
             <label for="cvc">Security code</label>
-            <input id="cvc" type="text" name="cvc" placeholder="XXX"/>
+            <input id="cvc" type="text" name="cvc" onblur="getEncryptedData()" placeholder="XXX"/>
         </div>
         <div class="card_kind">
-            <img src="creditcard_mastercard.png" alt="Credit Card type" height="25" />
+            <img src="creditcard.png" alt="Credit Card type" height="25" />
         </div>
         <input type="hidden" name="buckaroo3extended_creditcard_encryptedCardData" id="buckaroo3extended_creditcard_encryptedCardData"/>
         <input type="hidden" name="buckaroo3extended_creditcard_method" id="buckaroo3extended_creditcard_method"/>
-        <button type="button" class="submit btn btn-primary" style="float: left" onClick="getEncryptedData()">SUBMIT</button>
     </div>
 
 </div>
